// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page snapshot About renders 1`] = `
<div
  className="About"
/>
`;

exports[`Home page snapshot Landing Page renders 1`] = `
<div
  className="LandingPage"
>
  <h1>
    Frame.cards learning made easy
  </h1>
  <div
    style={Object {}}
  >
    <div
      className="buttonBox"
    >
      <button
        className="MyButton"
        style={
          Object {
            "backgroundColor": "#5A90A1",
            "fontSize": "32px",
          }
        }
      >
         
        Get Started
         
      </button>
    </div>
  </div>
</div>
`;

exports[`Home page snapshot Navigation Bar renders 1`] = `
<div
  className="NavBar"
>
  <div
    style={Object {}}
  />
  <div
    style={Object {}}
  >
    <div
      className="buttonBox"
    >
      <button
        className="MyButton"
        style={
          Object {
            "backgroundColor": "#C4C4C4",
            "fontSize": "24px",
          }
        }
      >
         
        Login
         
      </button>
    </div>
  </div>
</div>
`;

exports[`mainApp snapshot 404 renders 1`] = `
<div
  className="css-gcm1jx"
>
  <div
    className="flex-container css-8jr5nd"
    id="side"
  >
    <div
      className="css-csay8j"
    >
      <a
        href="/myFolders"
        onClick={[Function]}
      >
        <div
          style={Object {}}
        >
          <img
            alt="icon option"
            className="css-fbcrhc"
            src="test-file-stub"
          />
        </div>
      </a>
    </div>
    <div
      className="css-csay8j"
    >
      <a
        href="/CreateCard"
        onClick={[Function]}
      >
        <div
          style={Object {}}
        >
          <img
            alt="icon option"
            className="css-fbcrhc"
            src="test-file-stub"
          />
        </div>
      </a>
    </div>
    <div
      className="css-csay8j"
    >
      <a
        href="/CreateFolder"
        onClick={[Function]}
      >
        <div
          style={Object {}}
        >
          <img
            alt="icon option"
            className="css-fbcrhc"
            src="test-file-stub"
          />
        </div>
      </a>
    </div>
    <div
      className="css-csay8j"
    >
      <a
        href="/ImageInterface"
        onClick={[Function]}
      >
        <div
          style={Object {}}
        >
          <img
            alt="icon option"
            className="css-fbcrhc"
            src="test-file-stub"
          />
        </div>
      </a>
    </div>
    <div
      className="css-csay8j"
    >
      <a
        href="/YoutubeInterface"
        onClick={[Function]}
      >
        <div
          style={Object {}}
        >
          <img
            alt="icon option"
            className="css-fbcrhc"
            src="test-file-stub"
          />
        </div>
      </a>
    </div>
    <div
      className="css-csay8j"
    >
      <a
        href="/myFolders"
        onClick={[Function]}
      >
        <div
          style={Object {}}
        >
          <img
            alt="icon option"
            className="css-fbcrhc"
            src="test-file-stub"
          />
        </div>
      </a>
    </div>
  </div>
  <h2>
    404 page not found
  </h2>
</div>
`;

exports[`mainApp snapshot Create Folder renders 1`] = `
<div
  className="App"
>
  <div
    className="flex-container css-1dc4ncl"
  >
    <div
      className="css-15s9vjo"
    >
      <img
        alt="Frame Cards Logo"
        className="css-7r85ak"
        src="test-file-stub"
      />
    </div>
    <div
      className="css-ku0l26"
    >
      <form
        action="/someServlet"
        className="css-1rerb9r"
      >
        <button
          className="material-icons css-9h4d91"
          type="submit"
        >
          <i
            className="material-icons"
          >
            search
          </i>
        </button>
        <input
          className="css-pux1ie"
          name="search-input"
          placeholder="Search.."
          type="text"
        />
      </form>
    </div>
  </div>
  <div
    id="main"
  >
    <div
      className="flex-container css-8jr5nd"
      id="side"
    >
      <div
        className="css-csay8j"
      >
        <a
          href="/myFolders"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/CreateCard"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/CreateFolder"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/ImageInterface"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/YoutubeInterface"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/myFolders"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
    </div>
    <div
      id="container"
    >
      <div
        id="innerContainer"
      >
        <div
          id="folderPreview"
        >
          <h2
            id="previewFolderName"
          >
            None
          </h2>
          <h4
            id="previewFolderLang"
          >
            English
          </h4>
        </div>
        <div
          id="formBox"
        >
          <ul>
            <form
              action="/folder?userKey=ahFzdTE5LWNvZGV1LTgtNTQ3MnIfCxIEVXNlciIVMTcxNzQ5MTA2ODUxNTcxMzcxNTkxDA"
              id="myForm"
              method="post"
            >
              <li>
                <label>
                  Folder Name: 
                </label>
              </li>
              <li>
                <input
                  id="folderName"
                  name="folderName"
                  onBlur={[Function]}
                  placeholder="None"
                  required={true}
                  type="text"
                />
              </li>
              <li>
                <label>
                  Folder Language:
                </label>
              </li>
              <li>
                <div
                  id="scroll"
                >
                  <select
                    id="language"
                    name="language"
                    onChange={[Function]}
                    required={true}
                    value="English"
                  >
                    <option
                      value="English"
                    >
                      English
                    </option>
                    <option
                      value="Italian"
                    >
                      Italian
                    </option>
                    <option
                      value="Hindi"
                    >
                      Hindi
                    </option>
                    <option
                      value="Arabic"
                    >
                      Arabic
                    </option>
                    <option
                      value="Chinese"
                    >
                      Chinese
                    </option>
                    <option
                      value="English"
                    >
                      English
                    </option>
                    <option
                      value="French"
                    >
                      French
                    </option>
                    <option
                      value="Spanish"
                    >
                      Spanish
                    </option>
                    <option
                      value="German"
                    >
                      German
                    </option>
                    <option
                      value="Vietnamese"
                    >
                      Vietnamese
                    </option>
                    <option
                      value="Greek"
                    >
                      Greek
                    </option>
                  </select>
                </div>
              </li>
              <li>
                <input
                  id="submission"
                  type="submit"
                  value="Submit"
                />
              </li>
            </form>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`mainApp snapshot CreateCard renders 1`] = `
<div
  className="App"
>
  <div
    className="flex-container css-1dc4ncl"
  >
    <div
      className="css-15s9vjo"
    >
      <img
        alt="Frame Cards Logo"
        className="css-7r85ak"
        src="test-file-stub"
      />
    </div>
    <div
      className="css-ku0l26"
    >
      <form
        action="/someServlet"
        className="css-1rerb9r"
      >
        <button
          className="material-icons css-9h4d91"
          type="submit"
        >
          <i
            className="material-icons"
          >
            search
          </i>
        </button>
        <input
          className="css-pux1ie"
          name="search-input"
          placeholder="Search.."
          type="text"
        />
      </form>
    </div>
  </div>
  <div
    id="main"
  >
    <div
      className="flex-container css-8jr5nd"
      id="side"
    >
      <div
        className="css-csay8j"
      >
        <a
          href="/myFolders"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/CreateCard"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/CreateFolder"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/ImageInterface"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/YoutubeInterface"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/myFolders"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
    </div>
    <div
      id="container"
    >
      <div
        id="innerContainer"
      >
        <div
          id="CardPreview"
        >
          <div
            className="holdCard"
          >
            <div
              className="FlashcardFront css-liv8jr"
            >
              <img
                alt="image"
                src=""
                style={
                  Object {
                    "display": "block",
                    "height": "auto",
                    "margin": "10px",
                    "maxHeight": "150px",
                    "maxWidth": "150px",
                    "width": "auto",
                  }
                }
              />
              none
            </div>
          </div>
          <div
            className="holdCard"
          >
            <div
              className="FlashcardBack css-17ceb37"
            >
              none
            </div>
          </div>
        </div>
        <div
          id="formBox"
        >
          <ul>
            <form
              action="/usercards?userKey=ahFzdTE5LWNvZGV1LTgtNTQ3MnIfCxIEVXNlciIVMTIxODQwMTczNDMzMDE4NzUzNDMxDA"
              id="myForm"
              method="post"
            >
              <li>
                <span
                  className="inline"
                >
                  <label
                    className="block"
                  >
                    From:
                  </label>
                  <select
                    className="css-1mi7hip"
                    name="languages"
                    onChange={[Function]}
                    value="none"
                  >
                    <option
                      value="it"
                    >
                      Italian
                    </option>
                    <option
                      value="hi"
                    >
                      Hindi
                    </option>
                    <option
                      value="ar"
                    >
                      Arabic
                    </option>
                    <option
                      value="zh"
                    >
                      Chinese
                    </option>
                    <option
                      value="en"
                    >
                      English
                    </option>
                    <option
                      value="fr"
                    >
                      French
                    </option>
                    <option
                      value="es"
                    >
                      Spanish
                    </option>
                    <option
                      value="de"
                    >
                      German
                    </option>
                    <option
                      value="vi"
                    >
                      Vietnamese
                    </option>
                    <option
                      value="el"
                    >
                      Greek
                    </option>
                  </select>
                </span>
                <span
                  className="inline"
                >
                  <label
                    className="block"
                  >
                    To:
                  </label>
                  <select
                    className="css-1mi7hip"
                    name="languages"
                    onChange={[Function]}
                    value="none"
                  >
                    <option
                      value="it"
                    >
                      Italian
                    </option>
                    <option
                      value="hi"
                    >
                      Hindi
                    </option>
                    <option
                      value="ar"
                    >
                      Arabic
                    </option>
                    <option
                      value="zh"
                    >
                      Chinese
                    </option>
                    <option
                      value="en"
                    >
                      English
                    </option>
                    <option
                      value="fr"
                    >
                      French
                    </option>
                    <option
                      value="es"
                    >
                      Spanish
                    </option>
                    <option
                      value="de"
                    >
                      German
                    </option>
                    <option
                      value="vi"
                    >
                      Vietnamese
                    </option>
                    <option
                      value="el"
                    >
                      Greek
                    </option>
                  </select>
                </span>
              </li>
              <li>
                <label
                  className="block"
                >
                  Text:
                </label>
                <input
                  id="mainText"
                  onBlur={[Function]}
                  placeholder="none"
                  required={true}
                  type="text"
                />
              </li>
              <li>
                <label
                  className="block"
                >
                  Translation:
                </label>
                <input
                  id="translated"
                  placeholder="none"
                  readOnly={true}
                  type="text"
                />
              </li>
              <li>
                <span
                  className="inline"
                >
                  <label
                    className="block"
                  >
                    Image:
                  </label>
                  <input
                    id="image"
                    name="imageSelect"
                    type="file"
                  />
                </span>
                <span
                  className="inline"
                >
                  <label
                    className="block"
                  >
                    Folder:
                  </label>
                  <h5>
                    loading
                  </h5>
                </span>
              </li>
              <li>
                <input
                  id="submission"
                  type="submit"
                  value="Submit"
                />
              </li>
            </form>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`mainApp snapshot Inside Folder renders 1`] = `
<div
  className="App"
>
  <div
    className="flex-container css-1dc4ncl"
  >
    <div
      className="css-15s9vjo"
    >
      <img
        alt="Frame Cards Logo"
        className="css-7r85ak"
        src="test-file-stub"
      />
    </div>
    <div
      className="css-ku0l26"
    >
      <form
        action="/someServlet"
        className="css-1rerb9r"
      >
        <button
          className="material-icons css-9h4d91"
          type="submit"
        >
          <i
            className="material-icons"
          >
            search
          </i>
        </button>
        <input
          className="css-pux1ie"
          name="search-input"
          placeholder="Search.."
          type="text"
        />
      </form>
    </div>
  </div>
  <div
    id="main"
  >
    <div
      className="flex-container css-8jr5nd"
      id="side"
    >
      <div
        className="css-csay8j"
      >
        <a
          href="/myFolders"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/CreateCard"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/CreateFolder"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/ImageInterface"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/YoutubeInterface"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/myFolders"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
    </div>
    <div
      className="css-1rpgtf9"
    >
      <h1>
        Your Folder has 0 cards
      </h1>
    </div>
  </div>
</div>
`;

exports[`mainApp snapshot My Folders renders 1`] = `
<div
  className="App"
>
  <div
    className="flex-container css-1dc4ncl"
  >
    <div
      className="css-15s9vjo"
    >
      <img
        alt="Frame Cards Logo"
        className="css-7r85ak"
        src="test-file-stub"
      />
    </div>
    <div
      className="css-ku0l26"
    >
      <form
        action="/someServlet"
        className="css-1rerb9r"
      >
        <button
          className="material-icons css-9h4d91"
          type="submit"
        >
          <i
            className="material-icons"
          >
            search
          </i>
        </button>
        <input
          className="css-pux1ie"
          name="search-input"
          placeholder="Search.."
          type="text"
        />
      </form>
    </div>
  </div>
  <div
    id="main"
  >
    <div
      className="flex-container css-8jr5nd"
      id="side"
    >
      <div
        className="css-csay8j"
      >
        <a
          href="/myFolders"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/CreateCard"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/CreateFolder"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/ImageInterface"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/YoutubeInterface"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
      <div
        className="css-csay8j"
      >
        <a
          href="/myFolders"
          onClick={[Function]}
        >
          <div
            style={Object {}}
          >
            <img
              alt="icon option"
              className="css-fbcrhc"
              src="test-file-stub"
            />
          </div>
        </a>
      </div>
    </div>
    <div
      className="css-1rpgtf9"
    >
      <h1>
        You have 0 Folders 
      </h1>
    </div>
  </div>
</div>
`;

exports[`mainComponents snapshot SideBar renders 1`] = `
<div
  className="flex-container css-8jr5nd"
  id="side"
>
  <div
    className="css-csay8j"
  >
    <a
      href="/myFolders"
      onClick={[Function]}
    >
      <div
        style={Object {}}
      >
        <img
          alt="icon option"
          className="css-fbcrhc"
          src="test-file-stub"
        />
      </div>
    </a>
  </div>
  <div
    className="css-csay8j"
  >
    <a
      href="/CreateCard"
      onClick={[Function]}
    >
      <div
        style={Object {}}
      >
        <img
          alt="icon option"
          className="css-fbcrhc"
          src="test-file-stub"
        />
      </div>
    </a>
  </div>
  <div
    className="css-csay8j"
  >
    <a
      href="/CreateFolder"
      onClick={[Function]}
    >
      <div
        style={Object {}}
      >
        <img
          alt="icon option"
          className="css-fbcrhc"
          src="test-file-stub"
        />
      </div>
    </a>
  </div>
  <div
    className="css-csay8j"
  >
    <a
      href="/ImageInterface"
      onClick={[Function]}
    >
      <div
        style={Object {}}
      >
        <img
          alt="icon option"
          className="css-fbcrhc"
          src="test-file-stub"
        />
      </div>
    </a>
  </div>
  <div
    className="css-csay8j"
  >
    <a
      href="/YoutubeInterface"
      onClick={[Function]}
    >
      <div
        style={Object {}}
      >
        <img
          alt="icon option"
          className="css-fbcrhc"
          src="test-file-stub"
        />
      </div>
    </a>
  </div>
  <div
    className="css-csay8j"
  >
    <a
      href="/myFolders"
      onClick={[Function]}
    >
      <div
        style={Object {}}
      >
        <img
          alt="icon option"
          className="css-fbcrhc"
          src="test-file-stub"
        />
      </div>
    </a>
  </div>
</div>
`;

exports[`mainComponents snapshot header renders 1`] = `
<div
  className="flex-container css-1dc4ncl"
>
  <div
    className="css-15s9vjo"
  >
    <img
      alt="Frame Cards Logo"
      className="css-7r85ak"
      src="test-file-stub"
    />
  </div>
  <div
    className="css-ku0l26"
  >
    <form
      action="/someServlet"
      className="css-1rerb9r"
    >
      <button
        className="material-icons css-9h4d91"
        type="submit"
      >
        <i
          className="material-icons"
        >
          search
        </i>
      </button>
      <input
        className="css-pux1ie"
        name="search-input"
        placeholder="Search.."
        type="text"
      />
    </form>
  </div>
</div>
`;
